wow debug another plogeal;kjdf

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: ${project.version}
 #website:
 author: RoboMWM
 main: me.robomwm.HotFix.Main
+softdepend: [AbsorptionShields]
 commands:
    hotfix:
       description: no
