--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>1.12-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.MLG-Fortress</groupId>
+            <artifactId>AbsorptionShields</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
