--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
         <id>paper-repo</id>
         <url>https://repo.destroystokyo.com/repository/maven-public/</url>
     </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
 </repositories>
     <build>
         <finalName>${project.name}</finalName>
