--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>me.robomwm</groupId>
     <artifactId>HotFix</artifactId>
     <version>1.0.1</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <repositories>
     <repository>
         <id>paper-repo</id>
